2012-08-19  Ana Vazquez <anainesvs@gmail.com>

        * [r102] man/editPed.Rd: Correction F by FALSE; new release.
        * [r101] R/pedigree.R: fix parentheses in the code

2012-08-17  Ana Vazquez <anainesvs@gmail.com>

        * [r100] NAMESPACE: Include functions editPed getA getAInv
        * [r99] R/pedigree.R: created functions editPed getA getAInv getGenAncestors

2009-05-29  Douglas Bates <bates@stat.wisc.edu>

	* [r98] man/relfactor.Rd: Change man page for new default values
	* [r97] DESCRIPTION, R/pedigree.R: Correction to relfactor; new release.

2009-05-29  Ana Vazquez <anainesvs@gmail.com>

	* [r96] man/relfactor.Rd: Cholesky() substituted by chol()
	* [r95] R/pedigree.R:
	* [r94] man/relfactor.Rd: bug in relfactor computation and modification
	  in relfactor.Rd
2009-05-20  Douglas Bates <bates@stat.wisc.edu>

	* [r92] DESCRIPTION, man/pedigreemm-class.Rd: New release with corrected
	  links for external S4 classes

2009-05-14  Douglas Bates <bates@stat.wisc.edu>

	* [r90] DESCRIPTION: New release
	* [r89] man/pedigreemm-class.Rd: Rather ugly fix for codoc complaint

2009-04-20  Ana Vazquez <anainesvs@gmail.com>

	* [r88] R/pedigree.R: ZStar

2009-04-16  Douglas Bates <bates@stat.wisc.edu>

	* [r87] DESCRIPTION, R/pedigree.R: Adding lmer_Zstar, new version

2009-04-09  Ana Vazquez <anainesvs@gmail.com>

	* [r86] man/pedCowsR.Rd: modification in pedCowsR.Rd

2009-03-10  Ana Vazquez <anainesvs@gmail.com>

	* [r85] man/pedCowsR.Rd: adding documentation for pedCowsR

2009-03-04  Douglas Bates <bates@stat.wisc.edu>

	* [r84] R/pedigree.R, man/pedigreemm-class.Rd: Corrections to the ranef
	  method

2009-02-26  Ana Vazquez <anainesvs@gmail.com>

	* [r83] data/pedCowsR.rda: modified name in pedCowsR to avoid conflicts

2009-02-26  Douglas Bates <bates@stat.wisc.edu>

	* [r82] man/pedSires.Rd: Remove links to the dC object
	* [r81] NAMESPACE: Export the Dmat function
	* [r80] R/pedigree.R: Remove diff markings

2009-02-25  Ana Vazquez <anainesvs@gmail.com>
